--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -155,5 +155,15 @@ table(fillData$week)
 2. Make a panel plot containing a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis):
 
 ```{r}
+dataByIntWeek <- aggregate(fillData$steps, 
+                      by = list(interval = as.numeric(as.character(fillData$interval)),
+                                weekdays = fillData$week), 
+                      FUN = "mean")
+names(dataByIntWeek)[3] <- "meanSteps"
+
+library(lattice)
+xyplot(dataByIntWeek$meanStep ~ dataByIntWeek$interval | dataByIntWeek$weekdays, 
+       layout = c(1, 2), type = "l", 
+       xlab = "Interval", ylab = "Number of steps")
 
 ````
